update langchain use cases file

--- a/Related/langchain_usecases.ipynb
+++ b/Related/langchain_usecases.ipynb
@@ -8,7 +8,8 @@
       },
       "outputs": [],
       "source": [
-        "openai_api_key='YOUR_API_KEY'\n"
+        "openai_api_key='YOUR_API_KEY'\n",
+        "# 使用你自己的OpenAI API key"
       ]
     },
     {
@@ -38,7 +39,16 @@
       ],
       "source": [
         "from IPython.display import display, HTML\n",
-        "display(HTML(\"<style>.container { width:90% !important; }</style>\"))"
+        "display(HTML(\"<style>.container { width:90% !important; }</style>\"))\n",
+        "# 帮助你的ipynb看起来更舒服"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- 在我们开始前，安装需要的依赖"
       ]
     },
     {
@@ -137,11 +147,34 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Introduction\n",
+        "\n",
+        "我们能使用 Lang Chain 实现哪些能力，列举的不是全部，但是都是具备代表性的特性能力\n",
+        "\n",
+        "- Summarization - 对文本/聊天内容的重点内容总结\n",
+        "- Question and Answering Over Documents - 使用文档作为上下文信息，基于文档内容进行问答\n",
+        "- Extraction - 从文本内容中抽取结构化的内容\n",
+        "- Evaluation - 分析并评估LLM输出的结果的好坏\n",
+        "- Querying Tabular Data - 从数据库/类数据库内容中抽取数据信息\n",
+        "- Code Understanding - 分析代码，并从代码中获取逻辑，同时也支持QA\n",
+        "- Interacting with APIs - 通过对API文档的阅读，理解API文档并向真实世界调用API获取真实数据\n",
+        "- Chatbots - 具备记忆能力的聊天机器人框架（有UI交互能力）\n",
+        "- Agents - 使用LLMs进行任务分析和决策，并调用工具执行决策\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "2IarVI6ptBbD"
       },
       "source": [
-        "## Summarization"
+        "## Summarization\n",
+        "\n",
+        "- 扔给LLM一段文本，让他给你生成总结可以说是最常见的场景之一了\n",
+        "- 目前最火的应用应该是 chatPDF"
       ]
     },
     {
@@ -174,9 +207,9 @@
         "from langchain.llms import OpenAI\n",
         "from langchain import PromptTemplate\n",
         "\n",
-        "llm = OpenAI(temperature=0, model_name = 'gpt-3.5-turbo', openai_api_key=openai_api_key) # init desired llm\n",
+        "llm = OpenAI(temperature=0, model_name = 'gpt-3.5-turbo', openai_api_key=openai_api_key) # 初始化LLM模型\n",
         "\n",
-        "# Create our template\n",
+        "# 创建模板\n",
         "template = \"\"\"\n",
         "%INSTRUCTIONS:\n",
         "Please summarize the following piece of text.\n",
@@ -186,7 +219,7 @@
         "{text}\n",
         "\"\"\"\n",
         "\n",
-        "# Create a LangChain prompt template that we can insert values to later\"\n",
+        "# 创建一个 Lang Chain Prompt 模板，稍后可以插入值\n",
         "prompt = PromptTemplate(\n",
         "    input_variables=[\"text\"],\n",
         "    template=template,\n",
@@ -244,7 +277,7 @@
       ],
       "source": [
         "print (\"------- Prompt Begin -------\")\n",
-        "\n",
+        "# 打印模板内容\n",
         "final_prompt = prompt.format(text=confusing_text)\n",
         "print(final_prompt)\n",
         "\n",
@@ -273,6 +306,16 @@
       "source": [
         "output = llm(final_prompt)\n",
         "print (output)"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- 对于文本长度较短的文本我们可以直接这样执行summary操作\n",
+        "- 但是对于文本长度超过lLM支持的max token size 时将会遇到困难\n",
+        "- Lang Chain 提供了开箱即用的工具解决长文本的问题：load_summarize_chain"
       ]
     },
     {
@@ -319,7 +362,7 @@
         "with open('wonderland.txt', 'r') as file:\n",
         "    text = file.read() # 文章本身是爱丽丝梦游仙境\n",
         "\n",
-        "# Printing the first 285 characters as a preview\n",
+        "# 打印小说的前285个字符\n",
         "print (text[:285])"
       ]
     },
@@ -354,12 +397,12 @@
         }
       ],
       "source": [
-        "!pip install tiktoken"
+        "!pip install tiktoken # 安装用于分割文本的依赖"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -379,8 +422,17 @@
       "source": [
         "num_tokens = llm.get_num_tokens(text)\n",
         "\n",
-        "print (f\"There are {num_tokens} tokens in your file\") #全文一共4w8词\n",
+        "print (f\"There are {num_tokens} tokens in your file\") \n",
+        "# 全文一共4w8词\n",
         "# 很明显这样的文本量是无法直接送进LLM进行处理和生成的"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "解决长文本的方式无非是'chunking','splitting' 原文本为小的段落/分割部分\n"
       ]
     },
     {
@@ -404,9 +456,18 @@
       ],
       "source": [
         "text_splitter = RecursiveCharacterTextSplitter(separators=[\"\\n\\n\", \"\\n\"], chunk_size=5000, chunk_overlap=350)\n",
+        "# 虽然我使用的是 RecursiveCharacterTextSplitter，但是你也可以使用其他工具\n",
         "docs = text_splitter.create_documents([text])\n",
         "\n",
         "print (f\"You now have {len(docs)} docs intead of 1 piece of text\")"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "现在就需要一个 Lang Chain 工具，将分段文本送入LLM进行summary"
       ]
     },
     {
@@ -417,7 +478,8 @@
       },
       "outputs": [],
       "source": [
-        "# Get your chain ready to use\n",
+        "# 设置 lang chain\n",
+        "# 使用 map_reduce的chain_type，这样可以将多个文档合并成一个\n",
         "chain = load_summarize_chain(llm=llm, chain_type='map_reduce') # verbose=True 展示运行日志"
       ]
     },
@@ -455,7 +517,11 @@
         "id": "I74h0HtgwA--"
       },
       "source": [
-        "## Question & Answering Using Documents As Context"
+        "## Question & Answering Using Documents As Context\n",
+        "\n",
+        "为了确保LLM能够执行QA任务\n",
+        "1. 需要向LLM传递能够让他参考的上下文信息\n",
+        "2. 需要向LLM准确地传达我们的问题"
       ]
     },
     {
@@ -513,7 +579,6 @@
       "source": [
         "output = llm(context + question)\n",
         "\n",
-        "# I strip the text to remove the leading and trailing whitespace\n",
         "print (output.strip())"
       ]
     },
@@ -542,7 +607,7 @@
         }
       ],
       "source": [
-        "!pip install faiss-cpu"
+        "!pip install faiss-cpu # 需要注意，faiss存在GPU和CPU版本基于你的 runtime 安装对应的版本"
       ]
     },
     {
@@ -554,8 +619,8 @@
       "outputs": [],
       "source": [
         "# Using Embeddings\n",
-        "# splitting your text, embedding the chunks, putting the embeddings in a DB, and then querying them is the process\n",
-        "# The goal is to select relevant chunks of our long text, but which chunks do we pull? The most popular method is to pull similar texts based off comparing vector embeddings\n",
+        "# 分割分文，对分块的内容进行 embedding，将 embedding 存储到数据库中，然后进行查询\n",
+        "# 目标是选择相关的文本块，但是我们应该选择哪些文本块呢？目前最流行的方法是基于比较向量嵌入来选择相似的文本\n",
         "\n",
         "from langchain import OpenAI\n",
         "\n",
@@ -595,7 +660,7 @@
         }
       ],
       "source": [
-        "loader = TextLoader('wonderland.txt')\n",
+        "loader = TextLoader('wonderland.txt') # 载入一个长文本，我们还是使用爱丽丝漫游仙境这篇小说作为输入\n",
         "doc = loader.load()\n",
         "print (f\"You have {len(doc)} document\")\n",
         "print (f\"You have {len(doc[0].page_content)} characters in that document\")"
@@ -609,7 +674,7 @@
       },
       "outputs": [],
       "source": [
-        "# split long doc into smaller pieces\n",
+        "# 将小说分割成多个部分\n",
         "text_splitter = RecursiveCharacterTextSplitter(chunk_size=3000, chunk_overlap=400)\n",
         "docs = text_splitter.split_documents(doc)"
       ]
@@ -634,7 +699,7 @@
         }
       ],
       "source": [
-        "# Get the total number of characters so we can see the average later\n",
+        "# 获取字符的总数，以便可以计算平均值\n",
         "num_total_characters = sum([len(x.page_content) for x in docs])\n",
         "\n",
         "print (f\"Now you have {len(docs)} documents that have an average of {num_total_characters / len(docs):,.0f} characters (smaller pieces)\")"
@@ -648,10 +713,11 @@
       },
       "outputs": [],
       "source": [
-        "# Get your embeddings engine ready\n",
+        "# 设置 embedding 引擎\n",
         "embeddings = OpenAIEmbeddings(openai_api_key=openai_api_key)\n",
         "\n",
-        "# Embed your documents and combine with the raw text in a pseudo db. Note: This will make an API call to OpenAI\n",
+        "# Embed 文档，然后使用伪数据库将文档和原始文本结合起来\n",
+        "# 这一步会向 OpenAI 发起 API 请求\n",
         "docsearch = FAISS.from_documents(docs, embeddings)"
       ]
     },
@@ -663,7 +729,7 @@
       },
       "outputs": [],
       "source": [
-        "# Create retrieval engine\n",
+        "# 创建QA-retrieval chain\n",
         "qa = RetrievalQA.from_chain_type(llm=llm, chain_type=\"stuff\", retriever=docsearch.as_retriever())"
       ]
     },
@@ -695,7 +761,10 @@
       ],
       "source": [
         "query = \"What does the author describe the Alice following with?\"\n",
-        "qa.run(query)"
+        "qa.run(query)\n",
+        "# 这个过程中，检索器会去获取类似的文件部分，并结合你的问题让 LLM 进行推理，最后得到答案\n",
+        "# 这一步还有很多可以细究的步骤，比如如何选择最佳的分割大小，如何选择最佳的 embedding 引擎，如何选择最佳的检索器等等\n",
+        "# 同时也可以选择云端向量存储"
       ]
     },
     {
@@ -705,7 +774,15 @@
         "id": "bcLfoguiz9EY"
       },
       "source": [
-        "## Extraction"
+        "## Extraction\n",
+        "\n",
+        "- Extraction是从一段文本中解析数据的过程\n",
+        "- 通常与Extraction parser一起使用，以构建数据\n",
+        "\n",
+        "1. 从句子中提取结构化行以插入数据库\n",
+        "2. 从长文档中提取多行以插入数据库\n",
+        "3. 从用户查询中提取参数以进行 API 调用\n",
+        "4. 最近最火的 Extraction 库是 KOR"
       ]
     },
     {
@@ -716,19 +793,13 @@
       },
       "outputs": [],
       "source": [
-        "# Extraction is the process of parsing data from a piece of text. This is commonly used with output parsing in order to structure our data.\n",
-        "# Extract a structured row from a sentence to insert into a database\n",
-        "# extract multiple rows from a long document to insert into a database\n",
-        "# extracting parameters from a user query to make an API call\n",
         "\n",
-        "# To help construct our Chat Messages\n",
         "from langchain.schema import HumanMessage\n",
         "from langchain.prompts import PromptTemplate, ChatPromptTemplate, HumanMessagePromptTemplate\n",
         "\n",
-        "# We will be using a chat model, defaults to gpt-3.5-turbo\n",
         "from langchain.chat_models import ChatOpenAI\n",
         "\n",
-        "# To parse outputs and get structured data back\n",
+        "# 解析输出并获取结构化的数据\n",
         "from langchain.output_parsers import StructuredOutputParser, ResponseSchema\n",
         "\n",
         "chat_model = ChatOpenAI(temperature=0, model='gpt-3.5-turbo', openai_api_key=openai_api_key)"
@@ -819,19 +890,16 @@
       },
       "outputs": [],
       "source": [
-        "# Using LangChain's Response Schema\n",
-        "# Autogenerate the a prompt with bonafide format instructions. \n",
-        "# This is great because I don't need to worry about the prompt engineering side\n",
-        "# I'll leave that up to LangChain\n",
-        "# Read the output from the LLM and turn it into a proper python object for me\n",
+        "# 自动生成一个带有格式说明的提示\n",
+        "# 这样就不需要担心提示工程的问题了，将这部分完全交给 Lang Chain 来执行\n",
+        "# 将LLM的输出转化为 python 对象\n",
         "\n",
-        "# The schema I want out\n",
         "response_schemas = [\n",
         "    ResponseSchema(name=\"artist\", description=\"The name of the musical artist\"),\n",
         "    ResponseSchema(name=\"song\", description=\"The name of the song that the artist plays\")\n",
         "]\n",
         "\n",
-        "# The parser that will look for the LLM output in my schema and return it back to me\n",
+        "# 解析器将会把LLM的输出使用我定义的schema进行解析并返回期待的结构数据给我\n",
         "output_parser = StructuredOutputParser.from_response_schemas(response_schemas)\n"
       ]
     },
@@ -862,7 +930,6 @@
         }
       ],
       "source": [
-        "# The format instructions that LangChain makes. Let's look at them\n",
         "format_instructions = output_parser.get_format_instructions()\n",
         "print(format_instructions)"
       ]
@@ -875,9 +942,8 @@
       },
       "outputs": [],
       "source": [
-        "# The prompt template that brings it all together\n",
-        "# Note: This is a different prompt template than before because we are using a Chat Model\n",
-        "\n",
+        "# 这个 Prompt 与之前我们构建 Chat Model 时 Prompt 不同\n",
+        "# 这个 Prompt 是一个 ChatPromptTemplate，它会自动将我们的输出转化为 python 对象\n",
         "prompt = ChatPromptTemplate(\n",
         "    messages=[\n",
         "        HumanMessagePromptTemplate.from_template(\"Given a command from the user, extract the artist and song names \\n \\\n",
@@ -946,7 +1012,9 @@
         "output = output_parser.parse(fruit_output.content)\n",
         "\n",
         "print (output)\n",
-        "print (type(output))"
+        "print (type(output))\n",
+        "# 这里要注意的是，因为我们使用的 turbo 模型，生成的结果并不一定是每次都一致的\n",
+        "# 替换成gpt4模型可能是更好的选择"
       ]
     },
     {
@@ -982,7 +1050,7 @@
         "from langchain import OpenAI\n",
         "from langchain.document_loaders import TextLoader\n",
         "\n",
-        "# Eval!\n",
+        "# Eval\n",
         "from langchain.evaluation.qa import QAEvalChain\n",
         "\n",
         "llm = OpenAI(temperature=0, openai_api_key=openai_api_key)"
@@ -1009,7 +1077,7 @@
         }
       ],
       "source": [
-        "# Our long essay from before\n",
+        "# 还是使用爱丽丝漫游仙境作为文本输入\n",
         "loader = TextLoader('wonderland.txt')\n",
         "doc = loader.load()\n",
         "\n",
@@ -1068,9 +1136,8 @@
       "outputs": [],
       "source": [
         "chain = RetrievalQA.from_chain_type(llm=llm, chain_type=\"stuff\", retriever=docsearch.as_retriever(), input_key=\"question\")\n",
-        "# Notice how I have an input_key parameter now\n",
-        "# This tells the chain which key from a dictionary I supply has my prompt/query in it\n",
-        "# I specify question to match the question in the dict below"
+        "# 注意这里的 input_key 参数，这个参数告诉了 chain 我的问题在字典中的哪个 key 里\n",
+        "# 这样 chain 就会自动去找到问题并将其传递给 LLM"
       ]
     },
     {
@@ -1117,7 +1184,7 @@
       "source": [
         "predictions = chain.apply(question_answers)\n",
         "predictions\n",
-        "# have the LLM compare my ground truth answer (the answer key) with the result from the LLM (result key)"
+        "# 使用LLM模型进行预测，并将答案与我提供的答案进行比较，这里信任我自己提供的人工答案是正确的"
       ]
     },
     {
@@ -1131,7 +1198,6 @@
         "# Start your eval chain\n",
         "eval_chain = QAEvalChain.from_llm(llm)\n",
         "\n",
-        "# Have it grade itself. The code below helps the eval_chain know where the different parts are\n",
         "graded_outputs = eval_chain.evaluate(question_answers,\n",
         "                                     predictions,\n",
         "                                     question_key=\"question\",\n",
@@ -1183,7 +1249,7 @@
       },
       "outputs": [],
       "source": [
-        "# Let's query an SQLite DB with natural language. We'll look at the San Francisco Trees dataset.\n",
+        "# 使用自然语言查询一个 SQLite 数据库，我们将使用旧金山树木数据集\n",
         "# Don't run following code if you don't run sqlite and follow db\n",
         "from langchain import OpenAI, SQLDatabase, SQLDatabaseChain\n",
         "\n",
