--- a/Related/langchain_usecases.ipynb
+++ b/Related/langchain_usecases.ipynb
@@ -1919,8 +1919,8 @@
       },
       "outputs": [],
       "source": [
-        "os.environ[\"GOOGLE_CSE_ID\"] = \"a3499f99563e249f3\"\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyA6vdCpxvbHn-5ubAwQ2mTdZBej8Zw6pFU\""
+        "os.environ[\"GOOGLE_CSE_ID\"] = \"YOUR_GOOGLE_CSE_ID\"\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"YOUR_GOOGLE_API_KEY\""
       ]
     },
     {
